# colorizer-data

./: .bumpversion.toml  .gitattributes  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
.github/workflows/: run-tests.yml
colorizer_data/: __init__.py  converter.py  serve_https.py  types.py  utils.py  writer.py
colorizer_data/tests/: check_conversion_api.py  test_api.py  test_converter.py  test_types.py  test_utils.py  test_writer.py
colorizer_data/tests/assets/basic_csv/: data.csv  frame_16.tiff  frame_19.tiff
colorizer_data/tests/assets/test_csv/: frame_0.tiff
colorizer_data/utils/: __init__.py  converter.py
documentation/: DATA_FORMAT.md  GETTING_STARTED.ipynb  GETTING_STARTED.md
documentation/example_dataset/: feature_0.json  manifest.json
documentation/getting_started_guide/: GETTING_STARTED.ipynb  generate_data.py  requirements.txt
documentation/getting_started_guide/example/processed_dataset/: collection.json  feature_0.json  manifest.json  tracks.json
documentation/getting_started_guide/example/processed_dataset/dataset_1/: centroids.parquet  feature_1.parquet  seg_ids.parquet
documentation/getting_started_guide/example/processed_dataset/dataset_2/: centroids.parquet  manifest.json  tracks.parquet
documentation/getting_started_guide/example/processed_datasets/dataset_1/: feature_0.parquet  feature_2.parquet  manifest.json
documentation/getting_started_guide/example/processed_datasets/dataset_2/: feature_0.parquet  feature_1.parquet  feature_2.parquet  times.parquet
documentation/getting_started_guide/processed_dataset/: centroids.json  feature_0.json  feature_1.json  feature_2.json  manifest.json  times.json  tracks.json
documentation/getting_started_guide/raw_dataset/: data.csv  frame_0.tiff  frame_1.tiff  frame_10.tiff  frame_11.tiff  frame_12.tiff  frame_13.tiff  frame_14.tiff  frame_15.tiff  frame_17.tiff  frame_18.tiff  frame_2.tiff  frame_3.tiff  frame_4.tiff  frame_5.tiff  frame_6.tiff  frame_7.tiff  frame_8.tiff  frame_9.tiff
documentation/getting_started_guide/raw_dataset_1/: frame_10.tiff  frame_11.tiff  frame_14.tiff  frame_19.tiff
documentation/getting_started_guide/raw_dataset_2/: frame_14.tiff  frame_18.tiff  frame_3.tiff  frame_4.tiff  frame_5.tiff
documentation/getting_started_guide/raw_datasets/: collection.json
documentation/getting_started_guide/raw_datasets/dataset_1/: data.csv  frame_0.tiff  frame_1.tiff  frame_12.tiff  frame_13.tiff  frame_15.tiff  frame_16.tiff  frame_17.tiff  frame_18.tiff  frame_2.tiff  frame_3.tiff  frame_4.tiff  frame_5.tiff  frame_6.tiff  frame_7.tiff  frame_8.tiff  frame_9.tiff
documentation/getting_started_guide/raw_datasets/dataset_2/: data.csv  frame_0.tiff  frame_1.tiff  frame_10.tiff  frame_11.tiff  frame_12.tiff  frame_13.tiff  frame_15.tiff  frame_16.tiff  frame_17.tiff  frame_19.tiff  frame_2.tiff  frame_6.tiff  frame_7.tiff  frame_8.tiff  frame_9.tiff
documentation/getting_started_guide/scripts/: generate_data.py  process_data.py  run_local_server.py
documentation/getting_started_guide/scripts/viewer/: index.html
documentation/getting_started_guide/scripts/viewer/assets/: BannerVideo-DanspIEG.js  lerc-BLOt9h3O.js  lerc-CU7rrLug.js  main-VV3SKxX_.css
documentation/getting_started_guide/viewer/: 404.html  index.html
documentation/getting_started_guide/viewer/assets/: BannerVideo-e164ac80.js  BannerVideo-fdcadf5f.js  index-25580bd1.css
src/colorizer_data/: utils.py
tests/: test_converter.py  test_utils.py  test_writer.py
tests/assets/test_csv/: frame_0.tiff  frame_1.tiff
timelapse-colorizer-data/: convert_emt_h2b_labelfree.py  convert_emt_migration_data.py  convert_emt_nuclear_data.py  convert_nucmorph_data.py  data_writer_utils.py  make_collection_file.py
